--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
 * @Author: Administrator
 * @Date:   2017-10-17 22:54:41
 * @Last Modified by:   Administrator
-* @Last Modified time: 2017-10-20 01:58:47
+* @Last Modified time: 2017-11-28 19:12:01
 */
 @import url('base.css');
 /* 最上边登陆栏开始 */
@@ -60,13 +60,15 @@
 .head-left li:last-child{
 	margin-right: 0;
 }
-.box1{
+.box1,.box11{
 	width: 72px;
 	height: 38px;
 	background: #f2f2f2;
 	margin-top: -9px;
+
+	position: relative;
 }
-.box1-1{
+.box1-1,.box11-1{
 	display: block;
 	font-size: 12px;
 	color:#999999;
@@ -86,16 +88,45 @@
 	margin-left: 3px;
 	transition: all 0.3s;
 }
-.box1:hover{
+.box1:hover,.box11:hover{
 	background: #fff;
 }
 .box1:hover .box1-1 a{
 	color: #ff0036;
 	text-decoration: underline;
 }
-.box1:hover .sanjiaoxing{
+.box11:hover .box11-1{
+	color: #ff0036;
+	text-decoration: underline;
+}
+.box1:hover .sanjiaoxing,.box11:hover .sanjiaoxing{
 	transform:rotate(180deg) translateY(3px);
 }
+
+.menu1,.menu2{
+	width: 74px;
+	padding: 8px 10px;
+	background: #fff;
+	box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.3);
+	position: absolute;
+	top:38px;
+	left: 0; 
+
+	display: none;
+}
+.menu1 a,.menu2 a{
+	display: block;
+	height: 20px;
+	line-height: 20px;
+	font-size: 12px;
+	text-align: center;
+	color: #666;
+}
+.menu1 a:hover,.menu2 a:hover{
+	color:#ff0036 ;
+	text-decoration: underline;
+}
+
 .icon-taoxin:before{
 	color:#ff0036 ;
 	font-size: 12px;
@@ -125,6 +156,8 @@
 	background: #f2f2f2;
 	margin-top: -9px;
 	margin-left: -7px;
+
+	position: relative;
 }
 .box2-1{
 	font-size: 12px;
@@ -150,6 +183,8 @@
 	border-left:1px solid #999999; 
 	margin-left: -15px;
 	margin-top: 2px;
+
+	position: relative;
 }
 .icon-shouji:before{
 	color:#ff0036 ;
@@ -165,10 +200,40 @@
     margin-right:13px;
     margin-left: 3px;
 }
+.menu3{
+	width: 175px;
+	overflow: hidden;
+	position: absolute;
+	top: 10px;
+	left:-40px;
+	display: none;
 
+	z-index: 10;
+}
+.topsjx{
+	margin: 0 auto;
+	width: 0px;
+	height: 0px;
+	border-top:8px solid transparent;
+	border-bottom: 8px solid #fafafa;
+	border-left: 8px solid transparent; 
+	border-right:8px solid transparent;	
+}
+.menu3pic{
+	width: 175px;
+	height: 210px;
+	background: #fafafa;
+}
+.menu3pic img{
+	display: block;
+	width: 100%;
+	height: 100%;
+}
 .box3-2 a:hover {
 	color:#ff0036;
 }
+
+
 .head-right li:last-child{
 	margin-right: 0;
 }
@@ -222,6 +287,47 @@
 }
 .head-right li:nth-child(6){
 	margin-top: 12px;
+}
+
+.menu4{
+	width: 122px;
+	padding: 5px 10px;
+	background: #fff;
+	box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.3);
+	position: absolute;
+	top: 38px;
+	right: 0;
+	display: none;
+	z-index: 10;
+}
+.menu4 ul{
+	overflow: hidden;
+	width: 100%;
+
+
+}
+.menu4 ul li{
+	float:left;
+    padding: 5px 6px;
+    height: auto;
+    display: block;
+    line-height: 20px;
+    border-bottom: 1px dotted #827777;
+    margin-top: 0;
+}
+.menu4 ul li h3{
+	height: 20px;
+	font-size: 12px;
+	/* font-weight: 500; */
+	line-height: 20px;
+}
+.menu4 ul li a{
+	display: block;
+	line-height:20px; 
+}
+.menu4 ul li a:hover{
+	color: #ff0036;
+	text-decoration: underline;
 }
 /* 最上边登陆栏结束 */
 
@@ -386,6 +492,7 @@ nav .nav-left .iconfont{
 	width: 100%;
 	height: 500px;
 	background-color: #E8E8E8;
+	transition: 1s;
 }
 .banner-box{
 	width: 1230px;
@@ -397,6 +504,8 @@ nav .nav-left .iconfont{
 	width: 1230px;
 	height: 500px;
 	margin: 0 auto;
+
+
 }
 .banner-pic li {
 	width:1230px;
@@ -404,6 +513,13 @@ nav .nav-left .iconfont{
 	background: green;
 	position: absolute;
 
+	opacity: 0;
+	transition: 1s;
+
+
+}
+.banner-pic li:first-child{
+	opacity: 1;
 }
 .banner-pic li a,.banner-pic li a img{
 	display: block;
@@ -432,7 +548,7 @@ nav .nav-left .iconfont{
 .banner-btn li:last-child{
 	margin-right: 0;
 }
-.banner-btn li:hover{
+.banner-btn li:first-child{
 	background-color: rgba(219, 210, 192, 0.7);
 }
 
@@ -443,11 +559,16 @@ aside{
 	position: absolute;
 	top: 0px;
 	left:0;
+	/*  */
+}
+aside ul{
+	position: relative;
 }
 aside ul li{
 	width: 100%;
 	height: 31.25px;
 	/* cursor: pointer; */
+	
 	
 }
 
@@ -495,55 +616,140 @@ aside ul li:hover{
 	background-color: #fff;
 	
 }	
-aside ul li:hover a,aside ul li:hover i,aside ul li:hover div{
+aside ul li:first-child:hover .aside-word1,aside ul li:first-child:hover .aside-word2,aside ul li:hover i,aside ul li:hover .aside-word3{
 	color: #e5457a;
 }
 
-aside ul li:nth-child(2):hover a,aside ul li:nth-child(2):hover i,aside ul li:nth-child(2):hover div{
+aside ul li:nth-child(2):hover .aside-word1,aside ul li:nth-child(2):hover .aside-word2,aside ul li:nth-child(2):hover i,aside ul li:nth-child(2):hover .aside-word3{
 	color: #447fef;
 }
-aside ul li:nth-child(3):hover a,aside ul li:nth-child(3):hover i,aside ul li:nth-child(3):hover div{
+aside ul li:nth-child(3):hover .aside-word1,aside ul li:nth-child(3):hover .aside-word2,aside ul li:nth-child(3):hover i,aside ul li:nth-child(3):hover .aside-word3{
 	color:#694eed;
 }
-aside ul li:nth-child(4):hover a,aside ul li:nth-child(4):hover i,aside ul li:nth-child(4):hover div{
+aside ul li:nth-child(4):hover .aside-word1,aside ul li:nth-child(4):hover .aside-word2,aside ul li:nth-child(4):hover i,aside ul li:nth-child(4):hover .aside-word3{
 	color:#e5457a ;
 }
-aside ul li:nth-child(5):hover a,aside ul li:nth-child(5):hover i,aside ul li:nth-child(5):hover div{
+aside ul li:nth-child(5):hover .aside-word1,aside ul li:nth-child(5):hover .aside-word2,aside ul li:nth-child(5):hover i,aside ul li:nth-child(5):hover .aside-word3{
 	color: #694eed;
 }
-aside ul li:nth-child(6):hover a,aside ul li:nth-child(6):hover i,aside ul li:nth-child(6):hover div{
+aside ul li:nth-child(6):hover .aside-word1,aside ul li:nth-child(6):hover .aside-word2,aside ul li:nth-child(6):hover i,aside ul li:nth-child(6):hover .aside-word3{
 	color: #4780ef;
 }
-aside ul li:nth-child(7):hover a,aside ul li:nth-child(7):hover i,aside ul li:nth-child(7):hover div{
+aside ul li:nth-child(7):hover .aside-word1,aside ul li:nth-child(7):hover .aside-word2,aside ul li:nth-child(7):hover i,aside ul li:nth-child(7):hover .aside-word3{
 	color:#fa5e5e;
 }
-aside ul li:nth-child(8):hover a,aside ul li:nth-child(8):hover i,aside ul li:nth-child(8):hover div{
+aside ul li:nth-child(8):hover .aside-word1,aside ul li:nth-child(8):hover .aside-word1,aside ul li:nth-child(8):hover i,aside ul li:nth-child(8):hover .aside-word3{
 	color:#f7a831;
 }
-aside ul li:nth-child(9):hover a,aside ul li:nth-child(9):hover i,aside ul li:nth-child(9):hover div{
+aside ul li:nth-child(9):hover .aside-word1,aside ul li:nth-child(9):hover .aside-word2,aside ul li:nth-child(9):hover i,aside ul li:nth-child(9):hover .aside-word3{
 	color:#f7a831;
 }
-aside ul li:nth-child(10):hover a,aside ul li:nth-child(10):hover i,aside ul li:nth-child(10):hover div{
+aside ul li:nth-child(10):hover .aside-word1,aside ul li:nth-child(10):hover .aside-word2,aside ul li:nth-child(10):hover i,aside ul li:nth-child(10):hover .aside-word3{
 	color:#427def;
 }
-aside ul li:nth-child(11):hover a,aside ul li:nth-child(11):hover i,aside ul li:nth-child(11):hover div{
+aside ul li:nth-child(11):hover .aside-word1,aside ul li:nth-child(11):hover .aside-word2,aside ul li:nth-child(11):hover i,aside ul li:nth-child(11):hover .aside-word3{
 	color:#dd2727;
 }
-aside ul li:nth-child(12):hover a,aside ul li:nth-child(12):hover i,aside ul li:nth-child(12):hover div{
+aside ul li:nth-child(12):hover .aside-word1,aside ul li:nth-child(12):hover .aside-word2,aside ul li:nth-child(12):hover i,aside ul li:nth-child(12):hover .aside-word3{
 	color:#4780ef;
 }
-aside ul li:nth-child(13):hover a,aside ul li:nth-child(13):hover i,aside ul li:nth-child(13):hover div{
+aside ul li:nth-child(13):hover .aside-word1,aside ul li:nth-child(13):hover .aside-word2,aside ul li:nth-child(13):hover i,aside ul li:nth-child(13):hover .aside-word3{
 	color:#f7a831;
 }
-aside ul li:nth-child(14):hover a,aside ul li:nth-child(14):hover i,aside ul li:nth-child(14):hover div{
+aside ul li:nth-child(14):hover .aside-word1,aside ul li:nth-child(14):hover .aside-word2,aside ul li:nth-child(14):hover i,aside ul li:nth-child(14):hover .aside-word3{
 	color: #3bc7b0;
 }
-aside ul li:nth-child(15):hover a,aside ul li:nth-child(15):hover i,aside ul li:nth-child(15):hover div{
+aside ul li:nth-child(15):hover .aside-word1,aside ul li:nth-child(15):hover .aside-word2,aside ul li:nth-child(15):hover i,aside ul li:nth-child(15):hover .aside-word3{
 	color: #3bc7b0;
 }
-aside ul li:last-child:hover a,aside ul li:last-child:hover i,aside ul li:last-child:hover div,{
+aside ul li:nth-child(16):hover .aside-word1, aside ul li:last-child:hover .aside-word2,aside ul li:last-child:hover i,aside ul li:last-child:hover .aside-word3,{
 	color:#3cc7b0 ;
 }
+
+.aside-active{
+	width: 852px;
+	height: 504px;
+	background: #fafafa;
+	position: absolute;
+	top: 0;
+	left: 200px;
+
+	display: none;
+}
+.active-left{
+	width: 642px;
+	height: 100%;
+	background: #fff;
+	float: left;
+	padding: 8px 20px;
+	box-sizing: border-box;
+}
+.active-list{
+	width: 602px;
+	/* height: 66px;
+	overflow: hidden;
+	padding: 5px 0;
+	
+
+}
+.active-listleft{
+	float: left;
+	width: 72px;
+	font-size: 12px;
+	line-height: 40px;
+	color: #464646;
+}
+.active-listright{
+	float:right;
+	width: 480px;
+	/* height: 56px; */
+	padding: 5px 0;
+	padding-right: 30px;
+	border-bottom: 1px dotted #ccc;
+
+}
+.active-listright a{
+	font-size: 12px;
+	line-height: 24px;
+	color: #464646;
+	margin-right: 15px;
+
+}
+.active-right{
+	width: 210px;
+	height: 100%;
+
+	padding: 9px;
+	box-sizing: border-box;
+	float: right;
+}
+.active-right-pic{
+	float: left;
+	width: 94px;
+	height: 48px;
+	padding-right:1px;
+	padding-bottom: 1px;
+	box-sizing: border-box;
+
+}
+.active-right-pic img{
+	display: block;
+	width: 100%;
+	height: 100%;
+}
+.active-right-pic2{
+	width: 188px;
+	height: 86px;
+	margin-top: 10px;
+
+	float: left;
+}
+.active-right-pic2 img{
+	display: block;
+	width: 100%;
+	height: 100%;
+}
+
 
 /* main */
 main{
@@ -1677,13 +1883,17 @@ main{
 
 /* 定位条 */
 .f{
-	width: 36px;
-	height: 371px;
+	/* width: 36px;
+	height: 371px; */
 	/* background: red; */
+	width: 0;
+	height: 0;
 	position: fixed;
 	top:350px ;
 	bottom: 50px;
 	left: 50px;	
+	overflow: hidden;
+
 }
 .f1{
    width: 36px;
@@ -1696,49 +1906,37 @@ main{
 
    
 }
-.f1 a{
-	display: block;
-	color: #fff;
-}
+
 .f2{
    width: 36px;
    height:31px; 
    background: rgba(0, 0, 0, 0.6);
    margin-top: 1px;
-   padding-top: 5px;
-
-   
-}
-.f2 a{
-	display: block;
-	width: 25px;
-	height: 25px;
-	text-align: center;
+   padding: 5px;
+   box-sizing: border-box;
+   text-align: center;
    line-height: 12px;
    font-size: 12px;
-   margin-left: 4px;
    color: #fff;
+   
 }
+
 .f3{
 	display: block;
    width: 36px;
    height:31px; 
    background: rgba(0, 0, 0, 0.3);
    margin-top: 1px;
-   padding-top: 5px;
+   padding: 5px;
+   text-align: center;
+   line-height: 12px;
+   font-size: 12px;
+   color: #fff;
+     box-sizing: border-box;
 
    
 }
-.f3 a{
-	display: block;
-	width: 25px;
-	height: 25px;
-	text-align: center;
-   line-height: 12px;
-   font-size: 12px;
-   margin-left: 4px;
-   color: #fff;
-}
+
 .f :nth-child(2):hover{
 	background: #64C333;
 }
@@ -1893,6 +2091,7 @@ main{
 	font-size: 12px;
 	text-align: center;
 	line-height: 34px;
+	display: none;
 	opacity: 0;
 	transition: all 0.8s;
 
@@ -1909,6 +2108,7 @@ main{
 	margin-left: 112px;
 }
 .every4:hover .every4-1{
+	display: block;
 	opacity: 1;
 	transform: translateX(40px);
 }
@@ -2181,8 +2381,8 @@ main{
 .every10 img{
 	opacity: 1;
 	position: absolute;
-	left: -191px;
-	top: -208px;
+	right: 35px;
+	bottom: -5px;
 	display: none;
 }
 .every10:hover img{
@@ -2208,7 +2408,7 @@ main{
 	margin-left: 7px;
 }
 .every11:hover{
-	background:#f10033 ;
+	background:#f10033;
 }
 .every11 .every11-1{
 	width: 112px;
@@ -2239,4 +2439,54 @@ main{
 .every11:hover .every11-1{
 	opacity: 1;
 	transform: translateX(40px);
+}
+
+.topss{
+	width: 100%;
+	height: 50px;
+	background: #FE0C3F;
+	position: fixed;
+	top: -50px;
+	left: 0;
+	z-index: 99;
+}
+.top-con{
+	width: 1230px;
+	height: 50px;
+	margin: 0 auto;
+	/* background: #fff; */
+}
+.top-left{
+	width: 160px;
+	height: 100%;
+	/* background: pink; */
+	float: left;
+	margin-left: 30px;
+}
+.top-right{
+	width: 800px;
+	height: 100%;
+	/* background: yellow; */
+	float: left;
+	margin-left: 80px;
+}
+.top-right input{
+	display: block;
+	float: left;
+	width: 550px;
+	padding-left: 10px;
+	height: 30px;
+	margin-top: 10px;
+	outline: none;
+	border: none;
+}
+.top-right h3{
+	width: 100px;
+	height: 50px;
+	float: left;
+	line-height: 50px;
+	font-size: 16px;
+	text-align: center;
+	margin-left: 10px;
+	color: #fff;
 }
